<resources>
    <string name="app_name">SchoolMap</string>
    <string name="welcome_image">WelcomeImage</string>
    <string name="loading_imageView">Loading ImageView</string>
    <string name="loading">loading...</string>
    <string name="user_avatar">用户头像</string>
    <string name="email_hint">Please input your email...</string>
    <string name="password_hint">Please input your password...</string>
    <string name="sign_in_background">sign in background</string>
    <string name="network_not_connected">当前网络不可用</string>
    <string name="gps_not_connected">当前GPS不可用</string>
    <string name="open_network">请保持网络连接，以保证定位地精确！</string>
    <string name="open_gps">请保持GPS打开，以保证定位地精确！</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="location_fail">定位失败！</string>
    <string name="search_content">请输入您要搜索的内容</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="graphic">图文</string>
    <string name="video">视频</string>
    <string name="map">地图</string>
    <string name="find">发现</string>
    <string name="chat">聊天</string>
    <string name="login">登录</string>
    <string name="logging_in">正在登录......</string>
    <string name="friend">好友</string>
    <string name="icon">icon</string>
    <string name="selection">输入查询用户的用户名或者邮箱</string>
    <string name="rain">下雨</string>
    <string name="title">标题</string>
    <string name="content">详细内容</string>
    <string name="submit">提交</string>
    <string name="allPoi">查看全部</string>
    <string name="validPoi">有效事件</string>
    <string name="invalidPoi">失效事件</string>
    <string name="add">添加</string>

</resources>
