<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/search_content"
        android:inputType="text" />

    <ImageButton
        android:id="@+id/ib_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search" />

    <ImageButton
        android:id="@+id/ib_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more" />

</LinearLayout>