<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/tv_map"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop=""
        android:gravity="center"
        android:text="@string/map" />

    <TextView
        android:id="@+id/tv_find"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop=""
        android:gravity="center"
        android:text="@string/find" />

    <TextView
        android:id="@+id/tv_chat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop=""
        android:gravity="center"
        android:text="@string/chat" />

</LinearLayout>