<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in_bg"
        android:contentDescription="@string/sign_in_background"
        android:scaleType="fitXY" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/civ_avatar"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/default_header"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/civ_avatar"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:background="@color/colorIgnore"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingEnd="@dimen/padding_default"
        android:paddingStart="@dimen/padding_default"
        android:textColor="@color/white"
        android:textColorHint="@color/colorIgnoreText"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/et_email"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@color/colorIgnore"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingEnd="@dimen/padding_default"
        android:paddingStart="@dimen/padding_default"
        android:textColor="@color/white"
        android:textColorHint="@color/colorIgnoreText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        android:background="@drawable/btn_big"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp" />


</RelativeLayout>